box model review added

--- a/selectors.html
+++ b/selectors.html
@@ -55,6 +55,14 @@
         <p>Paragraph.</p>
         <p>Paragraph.</p>
     </section>
+
+    <!-- :before and :after-->
+    <!--for unocodes reference unicode-table.com -->
+
+    <blockquote>
+        <p>A person's a person, no matter how small.</p>
+        ~ <cite>dr. Seuss</cite>
+    </blockquote>
 </body>
 
 </html>
